# nanooctopus

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
abstarct_socket/: Cargo.toml  README.md
abstarct_socket/src/: arena.rs  borrowed_buffer.rs  detachable_buffer.rs  find_sequence.rs  head_arena.rs  head_arena_buffer.rs  lib.rs  read_stream.rs  read_stream_ext.rs  read_with.rs  read_with_ext.rs  socket.rs  staging_buffer.rs  stream_search.rs  write_with.rs
abstarct_socket/src/embassy_impl/: mod.rs  socket.rs  tcp_socket_pool.rs
abstarct_socket/src/embassy_impls/: mod.rs  read_stream.rs  read_stream_ext.rs  read_with.rs  read_with_ext.rs  write_with.rs
abstarct_socket/src/mocks/: dummy_multipart_read_stream.rs  dummy_read_stream.rs  eof.rs  error.rs  mock_loopback_socket.rs  mock_multipart_read_stream.rs  mock_read_stream.rs  mock_socket.rs  mod.rs  multipart_read_stream.rs  read_stream.rs
abstarct_socket/src/tokio_impl/: socket.rs  tokio_socket_wrapper.rs
abstarct_socket/tests/: tokio_impl_tests.rs
demos/rasberry_pico_w/: Cargo.toml
demos/rasberry_pico_w/src/: main.rs
examples/: hello_world.rs  tokio_hello_world.rs
examples/rasberry_pico_w/: Cargo.toml  README.md  build.rs
examples/rasberry_pico_w/build_utils/build_log/: Cargo.toml
examples/rasberry_pico_w/build_utils/build_log/src/: build_log_impl.rs  lib.rs
examples/rasberry_pico_w/build_utils/cargo_command/: Cargo.toml
examples/rasberry_pico_w/build_utils/cargo_command/src/: cmd.rs  lib.rs
examples/rasberry_pico_w/build_utils/file_operations/: Cargo.toml
examples/rasberry_pico_w/build_utils/file_operations/src/: lib.rs
examples/rasberry_pico_w/src/: main.rs
examples/tokio_hello_world/: README.md  cargo.toml
examples/tokio_hello_world/src/: main.rs
lib/: Cargo.toml
lib/.cargo/: config.toml
lib/abstarct_socket/: Cargo.toml
lib/abstarct_socket/src/: socket.rs
lib/abstarct_socket/src/embassy_impl/: socket.rs  stream_read_error.rs  tcp_socket_pool.rs
lib/abstarct_socket/src/mocks/: mock_multipart_read_stream.rs  mock_read_stream.rs  mock_socket.rs
lib/abstarct_socket/src/tokio_impl/: socket.rs  stream_read_error.rs
lib/src/: error.rs  handler.rs  http_header_parser.rs  lib.rs  method.rs  request.rs  response.rs  server.rs  status_code.rs
lib/src/web_socket/: web_socket.rs
protocols/: Cargo.toml  README.md
protocols/src/: error.rs  http_header_parser.rs  lib.rs  method.rs  read_stream.rs  status_code.rs  stream_request_parser.rs  web_socket.rs  web_socket_proto.rs
protocols/src/mocks/: error.rs  mock_loopback_socket.rs  mock_socket.rs  mod.rs
protocols/src/web_socket/: header.rs  header_reader.rs  header_writer.rs  mod.rs  web_socket.rs
protocols/src/web_socket/test_utils/: mod.rs
scripts/: check-build-matrix.sh  check-feature-matrix.sh  fmt-rust-targets.sh  hold_open_load.py
src/: allocator.rs  client.rs  handler.rs  lib.rs  options.rs  request.rs  response.rs  response_builder.rs  round_robin_socket_pool.rs  server.rs  slice_view.rs  socket_pool.rs  socket_wrapper.rs  worker_memory.rs  ws.rs
src/socket/mocks/: error.rs  mock_loopback_socket.rs  mock_socket.rs
src/socket/tokio_impl/: tokio_socket_wrapper.rs
src/web_socket/: web_socket.rs
src/ws/: mod.rs  web_socket_proto.rs
