[package]
name = "nanofish"
version = "0.9.1"
edition = "2024"
description = "🐟 A lightweight, `no_std` HTTP client and server for embedded systems built on top of Embassy networking."
documentation = "https://docs.rs/nanofish"
repository = "https://github.com/rttfd/nanofish"
license = "MIT"
keywords = [
    "no_std",
    "embedded",
    "async",
    "http_client",
    "http_server",
    "websockets",
]
authors = ["rttf <contact@rttf.dev>"]


[features]
default = []
tls = ["dep:embedded-tls", "dep:rand_core", "dep:rand_chacha", "protocols/tls"]
ws = ["dep:sha1", "dep:binascii", "dep:modular-bitfield", "protocols/ws"]
defmt = [
    "dep:defmt",
    "embassy-net/defmt",
    "protocols/defmt",
    "abstarct_socket/defmt",
    "defmt-or-log/defmt",
]
log = [
    "dep:env_logger",
    "dep:log",
    "defmt-or-log/log",
    "abstarct_socket/log",
    "protocols/log",
]


[dependencies]
defmt = { version = "1.0.1", optional = true }
log = { version = "0.4.29", optional = true }
env_logger = { version = "0.11", optional = true }
defmt-or-log = { version = "0.2.3", default-features = false }

embassy-net = { version = "0.7.1", features = [
    "dns",
    "medium-ethernet",
    "proto-ipv6",
    "tcp",
] }
embassy-time = "0.5.0"
embassy-sync = "0.7"
heapless = "0.8"
embedded-io-async = "0.6"
embedded-tls = { version = "0.18.0", default-features = false, optional = true }
rand_chacha = { version = "0.10.0", default-features = false, optional = true }
rand_core = { version = "0.10.0", optional = true }
# SHA-1 for no_std environments - try sha1 crate instead
sha1 = { version = "0.10", default-features = false, optional = true }
binascii = { version = "0.1.4", default-features = false, features = [
    "encode",
], optional = true }
modular-bitfield = { version = "0.13.0", optional = true }
protocols = { path = "./protocols", features = [
    "ws",
], default-features = false }
abstarct_socket = { path = "./abstarct_socket", default-features = false }

[dev-dependencies]
futures-lite = "2.0"
abstarct_socket = { path = "./abstarct_socket", features = [
    "std",
    "mocks",
    "log",
] }
protocols = { path = "./protocols", features = ["ws", "std", "mocks"] }
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
log = { version = "0.4.29" }
env_logger = { version = "0.11" }
defmt-or-log = { version = "0.2.3", features = ["log"] }
