[package]
name = "nanofish"
version = "0.9.1"
edition = "2024"
description = "🐟 A lightweight, `no_std` HTTP client and server for embedded systems built on top of Embassy networking."
documentation = "https://docs.rs/nanofish"
repository = "https://github.com/rttfd/nanofish"
license = "MIT"
keywords = [
    "no_std",
    "embedded",
    "async",
    "http_client",
    "http_server",
    "websockets",
]
authors = ["rttf <contact@rttf.dev>"]


[features]
default = ["std", "ws"]
std = [
    "embassy-net/std",
    "protocols/std",
    "abstarct_socket/std",
    "abstarct_socket/embassy_impl",
    "embassy-time/std",
    "embedded-io-async/std",
    "log",
]
proto-ipv4 = ["abstarct_socket/proto-ipv4", "embassy-net/proto-ipv4"]
proto-ipv6 = ["abstarct_socket/proto-ipv6", "embassy-net/proto-ipv6"]
tls = ["dep:embedded-tls", "dep:rand_core", "dep:rand_chacha", "protocols/tls"]
ws = ["dep:sha1", "dep:binascii", "dep:modular-bitfield", "protocols/ws"]
defmt = [
    "dep:defmt",
    "embassy-net/defmt",
    "protocols/defmt",
    "abstarct_socket/defmt",
    "defmt-or-log/defmt",
]
log = ["dep:log", "defmt-or-log/log", "abstarct_socket/log", "protocols/log"]


[dependencies]
defmt = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }

defmt-or-log = { version = "0.2.3", default-features = false }

embassy-net = { version = "0.7.1", features = [
    "dns",
    "medium-ethernet",
    "proto-ipv6",
    "tcp",
] }
embassy-time = "0.5.0"
embassy-sync = "0.7"
heapless = "0.8"
embedded-io-async = "0.6"
embedded-tls = { version = "0.18.0", default-features = false, optional = true }
rand_chacha = { version = "0.10.0", default-features = false, optional = true }
rand_core = { version = "0.10.0", optional = true }
# SHA-1 for no_std environments - try sha1 crate instead
sha1 = { version = "0.10", default-features = false, optional = true }
binascii = { version = "0.1.4", default-features = false, features = [
    "encode",
], optional = true }
modular-bitfield = { version = "0.13.0", optional = true }
protocols = { path = "./protocols", default-features = false }
abstarct_socket = { path = "./abstarct_socket", default-features = false }

#Bump allocator
prefix-arena = "0.1"

# Futures and async utilities
embassy-futures = "0.1"

[dev-dependencies]
futures-lite = "2.0"
abstarct_socket = { path = "./abstarct_socket", features = [
    "std",
    "mocks",
    "log",
] }
protocols = { path = "./protocols", features = ["ws", "std", "mocks"] }
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
log = { version = "0.4.29" }
defmt-or-log = { version = "0.2.3", features = ["log"] }
embassy-executor = { version = "0.10.0", features = [
    "platform-std",
    "executor-thread",
    "log",
] }

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"
# std to have ability to run the server on the host machine for testing.
# For embedded targets, the std feature can be disabled to save space.
required-features = ["std"]

[workspace]
members = [".", "abstarct_socket", "protocols"]
resolver = "3"
