[package]
name = "nanooctopus"
version = "0.9.1"
edition = "2024"
description = "🐟 A lightweight, `no_std` HTTP client and server for embedded systems built on top of Embassy networking."
documentation = "https://docs.rs/nanooctopus"
repository = "https://github.com/kdimonych/nanooctopus"
license = "MIT"
keywords = [
    "no_std",
    "embedded",
    "async",
    "http_client",
    "http_server",
    "websockets",
]
authors = ["rttf <contact@rttf.dev>"]


[features]
default = ["ws", "tokio_impl", "log"]
std = ["protocols/std", "abstarct_socket/std", "embedded-io-async/std"]
ws = ["dep:sha1", "dep:binascii", "dep:modular-bitfield", "protocols/ws"]
defmt = [
    "dep:defmt",
    "embassy-net/defmt",
    "protocols/defmt",
    "abstarct_socket/defmt",
    "defmt-or-log/defmt",
    "embedded-io-async/defmt-03",
]
log = ["dep:log", "defmt-or-log/log", "abstarct_socket/log", "protocols/log"]

embassy_impl = [
    "dep:embassy-net",
    "dep:embassy-time",
    "dep:embassy-sync",
    "embassy-net/dns",
    "embassy-net/medium-ethernet",
    "embassy-net/tcp",
    "abstarct_socket/embassy_impl",
]
proto-ipv6 = ["abstarct_socket/proto-ipv6", "embassy-net?/proto-ipv6"]
tokio_impl = ["dep:tokio", "abstarct_socket/tokio_impl", "std"]


[dependencies]
defmt = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }

defmt-or-log = { version = "0.2.3", default-features = false }

embassy-net = { version = "0.7.1", features = [
    "dns",
    "medium-ethernet",
    "proto-ipv4",
    "tcp",
], optional = true }
embassy-time = { version = "0.5.0", default-features = false, optional = true }
embassy-sync = { version = "0.7", default-features = false, optional = true }
heapless = "0.7.11"
embedded-io-async = "0.6"
# SHA-1 for no_std environments - try sha1 crate instead
sha1 = { version = "0.10", default-features = false, optional = true }
binascii = { version = "0.1.4", default-features = false, features = [
    "encode",
], optional = true }
modular-bitfield = { version = "0.13.0", optional = true }
protocols = { path = "./protocols", default-features = false }
abstarct_socket = { path = "./abstarct_socket", default-features = false }
tokio = { version = "1.0", features = ["full"], optional = true }

#Bump allocator
prefix-arena = "0.1"

# Futures and async utilities
embassy-futures = "0.1"

[dev-dependencies]
futures-lite = "2.0"
abstarct_socket = { path = "./abstarct_socket", default-features = false, features = [
    "std",
    "mocks",
] }
protocols = { path = "./protocols", default-features = false, features = [
    "ws",
    "std",
    "mocks",
] }
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
log = { version = "0.4.29" }
embassy-executor = { version = "0.10.0", features = [
    "platform-std",
    "executor-thread",
    "log",
] }

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"
# The example depends on the Embassy implementation surface.
required-features = ["embassy_impl"]

[workspace]
members = [".", "abstarct_socket", "protocols"]
resolver = "3"
