[package]
name = "abstarct_socket"
version = "0.1.0"
edition = "2024"
publish = false
categories = [
    "embedded",
    "no-std",
    "asynchronous",
    "network-programming",
    "embassy",
]

[lib]
name = "abstarct_socket"
path = "src/lib.rs"

[dependencies]
heapless = { version = "0.8", features = ["serde"] }
embassy-net = { version = "0.7.1", optional = true, features = [
    "tcp",
    "medium-ethernet",
    "proto-ipv4",
] }
embedded-io-async = "0.6"
embassy-time = { version = "0.5.0", optional = true, default-features = false }
defmt = { version = "1.0.1", optional = true }
log = { version = "0.4", optional = true }
ringbuf = { version = "0.4.8", optional = true }
defmt-or-log = { version = "0.2.3", default-features = false }
tokio = { version = "1.52", optional = true, features = ["io-util", "net"] }

prefix-arena = "0.1"

[dev-dependencies]
tokio = { version = "1.52", features = ["full"] }
tokio-test = "0.4"
ringbuf = "0.4.8"


[features]
default = ["mocks", "tokio_impl", "log"]
std = ["embassy-net?/std", "ringbuf?/std", "embassy-time?/std"]
defmt = [
    "dep:defmt",
    "defmt-or-log/defmt",
    "embassy-net?/defmt",
    "embedded-io-async/defmt-03",
]
mocks = ["dep:ringbuf"]
log = ["dep:log", "defmt-or-log/log"]
embassy_impl = ["dep:embassy-net", "dep:embassy-time"]
tokio_impl = ["dep:tokio", "std"]
proto-ipv6 = ["embassy_impl", "embassy-net/proto-ipv6"]

# Specifies that this is a no_std library by default
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
