[package]
name = "abstarct_socket"
version = "0.1.0"
edition = "2024"
publish = false
categories = [
    "embedded",
    "no-std",
    "asynchronous",
    "network-programming",
    "embassy",
]

[lib]
name = "abstarct_socket"
path = "src/lib.rs"

[dependencies]
# Optional dependencies for different implementations and features
# The `tokio` dependency is used for the Tokio-based implementation of the socket traits.
tokio = { version = "1.52", features = ["io-util", "net"], optional = true }

# The `embassy-net` and `embassy-time` dependencies are used for the Embassy-based implementation
# of the socket traits.
embassy-net = { version = "0.7.1", features = [
    "tcp",
    "medium-ethernet",
    "proto-ipv4",
], optional = true }
# The `embassy-time` dependency is used for time-related functionality in the Embassy-based implementation.
embassy-time = { version = "0.5.0", default-features = false, optional = true }
embassy-sync = { version = "0.7", default-features = false, optional = true }
embassy-futures = { version = "0.1", default-features = false, optional = true }

# The `ringbuf` dependency is used for the mock implementations of the socket traits, providing a simple
# ring buffer for testing purposes.
ringbuf = { version = "0.4.8", optional = true }

# The `defmt` and `log` dependencies are used for logging and debugging, allowing the library to support both
# defmt and log-based logging depending on the user's preference.
defmt = { version = "1.0.1", optional = true }
log = { version = "0.4", optional = true }


embedded-io-async = "0.6"
heapless = { version = "0.8", features = ["serde"] }
defmt-or-log = { version = "0.2.3", default-features = false }
prefix-arena = "0.1"

[dev-dependencies]
tokio = { version = "1.52", features = ["full"] }
tokio-test = "0.4"
ringbuf = "0.4.8"


[features]
default = []
std = ["embassy-net?/std", "ringbuf?/std", "embassy-time?/std"]
defmt = [
    "dep:defmt",
    "defmt-or-log/defmt",
    "embassy-net?/defmt",
    "embedded-io-async/defmt-03",
]
mocks = ["dep:ringbuf"]
log = ["dep:log", "defmt-or-log/log"]
embassy_impl = [
    "dep:embassy-net",
    "dep:embassy-time",
    "dep:embassy-sync",
    "dep:embassy-futures",
]
tokio_impl = ["dep:tokio", "std"]
proto-ipv6 = ["embassy_impl", "embassy-net/proto-ipv6"]

# Specifies that this is a no_std library by default
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
