[package]
name = "protocols"
version = "0.1.0"
edition = "2024"
publish = false
categories = [
    "embedded",
    "no-std",
    "asynchronous",
    "network-programming",
    "http",
    "embassy",
]

[lib]
name = "protocols"
path = "src/lib.rs"

[dependencies]
heapless = { version = "0.8", features = ["serde"] }
sha1 = { version = "0.10", default-features = false, optional = true }
binascii = { version = "0.1.4", default-features = false, features = [
    "encode",
], optional = true }
modular-bitfield = { version = "0.13.0", optional = true }

embedded-io-async = "0.6"
abstarct_socket = { path = "../abstarct_socket", default-features = false }

defmt = { version = "1.0.1", optional = true }
log = { version = "0.4.29", optional = true }
env_logger = { version = "0.11", optional = true }
defmt-or-log = { version = "0.2.3", default-features = false }

prefix-arena = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
abstarct_socket = { path = "../abstarct_socket", default-features = false, features = [
    "mocks",
    "log",
    "tokio_impl",
] }
sha1 = { version = "0.10", default-features = false }
binascii = { version = "0.1.4", default-features = false, features = [
    "encode",
] }
modular-bitfield = { version = "0.13.0" }
log = { version = "0.4.29" }
env_logger = { version = "0.11" }
defmt-or-log = { version = "0.2.3", features = ["log"] }

[features]
default = ["std", "log"]
std = ["abstarct_socket/std"]
ws = ["dep:sha1", "dep:binascii", "dep:modular-bitfield"]
defmt = [
    "dep:defmt",
    "abstarct_socket/defmt",
    "defmt-or-log/defmt",
    "embedded-io-async/defmt-03",
]
mocks = ["abstarct_socket/mocks"]
log = ["dep:env_logger", "dep:log", "defmt-or-log/log", "abstarct_socket/log"]

# Specifies that this is a no_std library by default
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
